--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,3 +3,4 @@
 @use './partials/typography' as *;
 @use './partials/utils' as *;
 @use './partials/variables' as *;
+@import "bootstrap/scss/bootstrap";
